# gypsum_dl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/gypsum_dl/: GypsumDL.py  Utils.py  __init__.py  cli.py  molstates.py
src/gypsum_dl/Steps/SMILES/dimorphite_dl/: dimorphite_dl.py
tests/: sample_molecules.json  test_gymsumdl.py  test_molstates.py
